SONARSLANG-671 Enable finer-grained incremental analysis
Replaced the default behavior of analyzing only changed files during Pull
Request analysis using `Descriptor.processesFilesIndependently`[0].

SLang analyzers can now explicitly declare checks that require
processing or retrieval of cached information for unchanged files.

[0] https://github.com/SonarSource/sonar-plugin-api/blob/8dbcc00e23dabed785b7b5b89b59ef0ca5b0777b/plugin-api/src/main/java/org/sonar/api/batch/sensor/SensorDescriptor.java#L93